// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot test for /ukrainian/articles/cp4l2mrejvdo For the AMP platform I can see the server-rendered HTML 1`] = `
<html lang="uk"
      dir="ltr"
      amp
>
  <head>
    <meta data-react-helmet="true"
          http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta data-react-helmet="true"
          charset="utf-8"
    >
    <meta data-react-helmet="true"
          name="robots"
          content="noodp,noydir"
    >
    <meta data-react-helmet="true"
          name="theme-color"
          content="#B80000"
    >
    <meta data-react-helmet="true"
          name="viewport"
          content="width=device-width, initial-scale=1, minimum-scale=1"
    >
    <meta data-react-helmet="true"
          name="apple-mobile-web-app-title"
          content="BBC News Україна"
    >
    <meta data-react-helmet="true"
          name="application-name"
          content="BBC News Україна"
    >
    <meta data-react-helmet="true"
          name="description"
          content="Це заголовок цієї тестової статті"
    >
    <meta data-react-helmet="true"
          property="fb:admins"
          content="100004154058350"
    >
    <meta data-react-helmet="true"
          property="fb:app_id"
          content="1609039196070050"
    >
    <meta data-react-helmet="true"
          name="mobile-web-app-capable"
          content="yes"
    >
    <meta data-react-helmet="true"
          name="msapplication-TileColor"
          content="#B80000"
    >
    <meta data-react-helmet="true"
          name="msapplication-TileImage"
          content="https://news.files.bbci.co.uk/include/articles/public/ukrainian/images/icons/icon-144x144.png"
    >
    <meta data-react-helmet="true"
          property="og:description"
          content="Це заголовок цієї тестової статті"
    >
    <meta data-react-helmet="true"
          property="og:image"
          content="https://news.files.bbci.co.uk/ws/img/logos/og/ukrainian.png"
    >
    <meta data-react-helmet="true"
          property="og:image:alt"
          content="BBC News Україна"
    >
    <meta data-react-helmet="true"
          property="og:locale"
          content="uk-UA"
    >
    <meta data-react-helmet="true"
          property="og:site_name"
          content="BBC News Україна"
    >
    <meta data-react-helmet="true"
          property="og:title"
          content="Це заголовок цієї тестової статті - BBC News Україна"
    >
    <meta data-react-helmet="true"
          property="og:type"
          content="article"
    >
    <meta data-react-helmet="true"
          property="og:url"
          content="http://localhost:7080/ukrainian/articles/cp4l2mrejvdo"
    >
    <meta data-react-helmet="true"
          name="twitter:card"
          content="summary_large_image"
    >
    <meta data-react-helmet="true"
          name="twitter:creator"
          content="@BBC_ua"
    >
    <meta data-react-helmet="true"
          name="twitter:description"
          content="Це заголовок цієї тестової статті"
    >
    <meta data-react-helmet="true"
          name="twitter:image:alt"
          content="BBC News Україна"
    >
    <meta data-react-helmet="true"
          name="twitter:image:src"
          content="https://news.files.bbci.co.uk/ws/img/logos/og/ukrainian.png"
    >
    <meta data-react-helmet="true"
          name="twitter:site"
          content="@BBC_ua"
    >
    <meta data-react-helmet="true"
          name="twitter:title"
          content="Це заголовок цієї тестової статті - BBC News Україна"
    >
    <meta data-react-helmet="true"
          name="article:author"
          content="http://www.facebook.com/bbcnews"
    >
    <meta data-react-helmet="true"
          name="article:modified_time"
          content="2020-01-08T10:07:49.451Z"
    >
    <meta data-react-helmet="true"
          name="article:published_time"
          content="2020-01-08T10:07:49.451Z"
    >
    <link rel="shortcut icon"
          href="/favicon.ico"
          type="image/x-icon"
    >
    <link rel="preconnect"
          href="https://ichef.bbci.co.uk"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://ichef.bbci.co.uk"
    >
    <link rel="preconnect"
          href="http://localhost:7080"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="http://localhost:7080"
    >
    <link rel="preconnect"
          href="https://logws1363.ati-host.net?"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://logws1363.ati-host.net?"
    >
    <title data-react-helmet="true">
      Це заголовок цієї тестової статті - BBC News Україна
    </title>
    <link data-react-helmet="true"
          rel="manifest"
          href="/ukrainian/manifest.json"
    >
    <link data-react-helmet="true"
          rel="canonical"
          href="http://localhost:7080/ukrainian/articles/cp4l2mrejvdo"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          href="http://localhost:7080/ukrainian/images/icons/icon-192x192.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="72x72"
          href="https://news.files.bbci.co.uk/include/articles/public/ukrainian/images/icons/icon-72x72.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="96x96"
          href="https://news.files.bbci.co.uk/include/articles/public/ukrainian/images/icons/icon-96x96.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="128x128"
          href="https://news.files.bbci.co.uk/include/articles/public/ukrainian/images/icons/icon-128x128.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="144x144"
          href="https://news.files.bbci.co.uk/include/articles/public/ukrainian/images/icons/icon-144x144.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="152x152"
          href="https://news.files.bbci.co.uk/include/articles/public/ukrainian/images/icons/icon-152x152.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="192x192"
          href="https://news.files.bbci.co.uk/include/articles/public/ukrainian/images/icons/icon-192x192.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="384x384"
          href="https://news.files.bbci.co.uk/include/articles/public/ukrainian/images/icons/icon-384x384.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="512x512"
          href="https://news.files.bbci.co.uk/include/articles/public/ukrainian/images/icons/icon-512x512.png"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/ukrainian/images/icons/icon-72x72.png"
          sizes="72x72"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/ukrainian/images/icons/icon-96x96.png"
          sizes="96x96"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/ukrainian/images/icons/icon-192x192.png"
          sizes="192x192"
    >
    <link data-react-helmet="true"
          rel="apple-touch-startup-image"
          href="https://news.files.bbci.co.uk/include/articles/public/ukrainian/images/icons/icon-512x512.png"
    >
    <link data-react-helmet="true"
          rel="shortcut icon"
          href="/favicon.ico"
          type="image/x-icon"
    >
    <script data-react-helmet="true"
            async
            custom-element="amp-bind"
            src="https://cdn.ampproject.org/v0/amp-bind-0.1.js"
    >
    </script>
    <script data-react-helmet="true"
            type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"Article","url":"http://localhost:7080/ukrainian/articles/cp4l2mrejvdo","publisher":{"@type":"NewsMediaOrganization","name":"BBC News Україна","publishingPrinciples":"https://www.bbc.com/ukrainian/institutional-50170368","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/ukrainian.png"}},"image":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/ukrainian.png"},"thumbnailUrl":"https://news.files.bbci.co.uk/ws/img/logos/og/ukrainian.png","mainEntityOfPage":{"@type":"WebPage","@id":"http://localhost:7080/ukrainian/articles/cp4l2mrejvdo","name":"Це заголовок цієї тестової статті"},"headline":"Це заголовок цієї тестової статті","datePublished":"2020-01-08T10:07:49.451Z","dateModified":"2020-01-08T10:07:49.451Z","author":{"@type":"NewsMediaOrganization","name":"BBC News Україна","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/ukrainian.png"},"noBylinesPolicy":"https://www.bbc.com/ukrainian/institutional-50170368#authorexpertise"}}
    </script>
    <script data-react-helmet="true"
            type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"VideoObject","name":"Test Ukrainian","description":"Test Ukrainian","duration":"PT29S","thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p012zl0f.jpg","uploadDate":"2019-12-03T16:04:31.000Z","embedURL":"https://polling.test.bbc.co.uk/ws/av-embeds/articles/cp4l2mrejvdo/p01plq00/uk/amp"}
    </script>
    <script data-react-helmet="true"
            async
            custom-element="amp-iframe"
            src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"
    >
    </script>
    <style amp-boilerplate>
      body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
    </style>
    <noscript>
      <style amp-boilerplate>
        body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}
      </style>
    </noscript>
    <script async
            src="https://cdn.ampproject.org/v0.js"
    >
    </script>
    <script async
            custom-element="amp-geo"
            src="https://cdn.ampproject.org/v0/amp-geo-0.1.js"
    >
    </script>
    <script async
            custom-element="amp-consent"
            src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"
    >
    </script>
    <script async
            custom-element="amp-analytics"
            src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"
    >
    </script>
  </head>
  <body>
    <div id="root"
         class="StyledDiv-sc-1dngwtn-0 riLLS"
    >
      <header role="banner">
        <div class="AmpConsentWrapper-sc-18egs7-0 bfTTJR">
          <amp-geo layout="nodisplay">
            <script type="application/json">
              {"ISOCountryGroups":{"eea":["at","ax","be","bg","bl","cy","cz","de","dk","ea","ee","es","fi","fr","gb","gf","gg","gi","gp","gr","hr","hu","ic","ie","im","is","it","je","li","lt","lu","lv","mf","mq","mt","nc","nl","no","pf","pl","pm","pt","re","ro","se","si","sj","sk","tf","va","wf","yt"]}}
            </script>
          </amp-geo>
          <amp-consent id="consent"
                       layout="nodisplay"
          >
            <script type="application/json">
              {"consents":{"user-consent":{"promptIfUnknownForGeoGroup":"eea","promptUI":"consent-prompt"}}}
            </script>
            <div id="consent-prompt">
              <div dir="ltr"
                   id="privacy"
                   class="Wrapper-sc-7g3fro-0 fOqUqv"
              >
                <div dir="ltr"
                     class="CenterWrapper-sc-7g3fro-1 ggwfud"
                >
                  <h2 dir="ltr"
                      class="Title-sc-7g3fro-2 iqsZpo"
                  >
                    Ми оновили наші правила використання особистих даних і файлів cookies
                  </h2>
                  <p dir="ltr"
                     class="ConsentBannerText-sc-7g3fro-4 fkYBRU"
                  >
                    Ми змінили правила використання особистих даних і файлів cookies та хотіли б повідомити вам, що це означає для вас і ваших особистих даних.
                  </p>
                  <ul dir="ltr"
                      class="Options-sc-7g3fro-3 jLugbT"
                  >
                    <li dir="ltr"
                        class="ListItem-sc-7g3fro-5 iOzCnw"
                    >
                      <button type="button"
                              on="tap:cookie.show, privacy.hide"
                      >
                        ОК
                      </button>
                    </li>
                    <li dir="ltr"
                        class="ListItem-sc-7g3fro-5 iOzCnw"
                    >
                      <a href="https://www.bbc.co.uk/usingthebbc/your-data-matters"
                         on="tap:cookie.show, privacy.hide"
                      >
                        Подивитися, що змінилося
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
              <div dir="ltr"
                   hidden
                   id="cookie"
                   class="Wrapper-sc-7g3fro-0 fOqUqv"
              >
                <div dir="ltr"
                     class="CenterWrapper-sc-7g3fro-1 ggwfud"
                >
                  <h2 dir="ltr"
                      class="Title-sc-7g3fro-2 iqsZpo"
                  >
                    Повідомити, що ви погоджуєтесь з використанням файлів cookies
                  </h2>
                  <p dir="ltr"
                     class="ConsentBannerText-sc-7g3fro-4 fkYBRU"
                  >
                    Ми використовуємо
                    <a href="https://www.bbc.co.uk/usingthebbc/cookies/what-do-i-need-to-know-about-cookies/">
                      cookies
                    </a>
                    , щоб вам було зручно користуватися сайтом. Повідомте нам, що ви погоджуєтесь з використанням цих файлів cookies.
                  </p>
                  <ul dir="ltr"
                      class="Options-sc-7g3fro-3 jLugbT"
                  >
                    <li dir="ltr"
                        class="ListItem-sc-7g3fro-5 iOzCnw"
                    >
                      <button type="button"
                              on="tap:consent.accept"
                              data-cookie-banner="accept"
                      >
                        Так, згоден
                      </button>
                    </li>
                    <li dir="ltr"
                        class="ListItem-sc-7g3fro-5 iOzCnw"
                    >
                      <a href="https://www.bbc.co.uk/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/"
                         on="tap:consent.reject"
                         data-cookie-banner="reject"
                      >
                        Ні, мені потрібно переглянути налаштування
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </amp-consent>
        </div>
        <div class="Banner-m3awbo-1 fDRnKv">
          <div class="SvgWrapper-m3awbo-0 dPXtDJ">
            <a href="/ukrainian"
               class="StyledLink-m3awbo-2 hsAGLj"
            >
              <svg height="24"
                   viewbox="0 0 251.36 24"
                   xmlns="http://www.w3.org/2000/svg"
                   focusable="false"
                   aria-hidden="true"
                   class="BrandSvg-m3awbo-3 cOdfGG"
              >
                <g fill-rule="evenodd"
                   stroke="#000"
                   stroke-width=".335"
                   style="stroke:#fff"
                >
                  <path d="M76.73.28v21.85H53.51V.28zm-4.62 14.58l-.37.23a10.85 10.85 0 0 1-5.53 1.69c-3.8 0-6.31-2.27-6.32-5.55s2.62-5.58 6.22-5.59a10.93 10.93 0 0 1 5.47 1.56l.36.2V4.47l-.16-.06a15.06 15.06 0 0 0-5.65-1.27 9.62 9.62 0 0 0-6.53 2.34 7.9 7.9 0 0 0-2.59 6 7.7 7.7 0 0 0 2.16 5.17A9.1 9.1 0 0 0 66 19.28a12.73 12.73 0 0 0 6-1.37l.14-.07zM50 .28v21.85H26.75V.28zm-5.54 14.48A4.21 4.21 0 0 0 41 10.69a3.87 3.87 0 0 0 1.35-1.08A3.41 3.41 0 0 0 43 7.47a3.8 3.8 0 0 0-1.27-2.85 5.76 5.76 0 0 0-4-1.29h-4.89v15.75h5.81a6.54 6.54 0 0 0 4.46-1.39 3.88 3.88 0 0 0 1.35-2.93z">
                  </path>
                  <path d="M41.57 14.45a1.86 1.86 0 0 1-.63 1.45 3.85 3.85 0 0 1-2.6.72h-2.68v-4.3h2.56a4.45 4.45 0 0 1 2.57.62 1.76 1.76 0 0 1 .78 1.51zM39.4 9.31a1.84 1.84 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57h-1.9v4.07H37a4.21 4.21 0 0 0 2.4-.56zM23.22.28v21.85H0V.28zM17.7 14.76a4.21 4.21 0 0 0-3.43-4.07 3.86 3.86 0 0 0 1.35-1.08 3.41 3.41 0 0 0 .65-2.13A3.8 3.8 0 0 0 15 4.63a5.76 5.76 0 0 0-4-1.29H6v15.74h5.9a6.54 6.54 0 0 0 4.46-1.39 3.89 3.89 0 0 0 1.34-2.93z">
                  </path>
                  <path d="M12.64 9.31a1.85 1.85 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57H8.91v4.07h1.3a4.21 4.21 0 0 0 2.43-.56zM14 12.94a4.45 4.45 0 0 0-2.57-.62H8.91v4.29h2.68a3.85 3.85 0 0 0 2.6-.72 1.86 1.86 0 0 0 .63-1.45 1.76 1.76 0 0 0-.82-1.5zM101 3.34h2.15v15.78h-1.94L90.69 7v12.12h-2.12V3.34h1.83L101 15.6zM107.26 3.34h8.95v2h-6.69v4.81H116v2h-6.46v4.9h6.9v2h-9.16zM140.33 3.34h2.25l-6.38 15.85h-.5l-5.16-12.84-5.21 12.84h-.49l-6.36-15.85h2.28l4.35 10.88 4.38-10.88h2.14L136 14.22zM148.7 12.51l-1.72-1a7.8 7.8 0 0 1-2.3-1.94 3.68 3.68 0 0 1-.68-2.2 3.88 3.88 0 0 1 1.29-3 4.83 4.83 0 0 1 3.36-1.16 6.36 6.36 0 0 1 3.63 1.11v2.49a5.23 5.23 0 0 0-3.67-1.64 3 3 0 0 0-1.82.51 1.55 1.55 0 0 0-.71 1.32 2 2 0 0 0 .52 1.33 6.6 6.6 0 0 0 1.69 1.3l1.73 1q2.89 1.73 2.89 4.39a4 4 0 0 1-1.27 3.08 4.65 4.65 0 0 1-3.3 1.19 6.94 6.94 0 0 1-4.26-1.44V15a5.32 5.32 0 0 0 4.24 2.32 2.66 2.66 0 0 0 1.77-.59 1.85 1.85 0 0 0 .71-1.48q-.02-1.45-2.1-2.74z">
                  </path>
                  <path d="M168.37 0v22.59"
                        stroke-width="2"
                  >
                  </path>
                  <path d="M185.76 6.3l3.83 8.91 3.14-8.91h1.49l-4 10.65a7.39 7.39 0 0 1-.51 1.1 3.16 3.16 0 0 1-.59.75 2.11 2.11 0 0 1-.7.43 2.49 2.49 0 0 1-.85.14 2.54 2.54 0 0 1-.75-.1 2.37 2.37 0 0 1-.59-.27v-1.38a1.54 1.54 0 0 0 .59.38 2.43 2.43 0 0 0 .81.12A1 1 0 0 0 188 18a1.42 1.42 0 0 0 .38-.23 1.57 1.57 0 0 0 .32-.37 1.14 1.14 0 0 0 .17-.49L184.23 6.3zM196.3 6.3h1.53v4.33a3.73 3.73 0 0 0 .77-.07 1.58 1.58 0 0 0 .62-.28 2.14 2.14 0 0 0 .51-.58 5.79 5.79 0 0 0 .47-1 6.94 6.94 0 0 1 .58-1.18 3 3 0 0 1 .66-.75 2.19 2.19 0 0 1 .8-.4 4 4 0 0 1 1-.11h.24v1.41a3.1 3.1 0 0 0-.85.1 1.31 1.31 0 0 0-.55.31 1.77 1.77 0 0 0-.38.54q-.16.33-.32.8a3.77 3.77 0 0 1-.26.57 4.23 4.23 0 0 1-.35.54 3.49 3.49 0 0 1-.41.45 1.67 1.67 0 0 1-.44.3 5 5 0 0 1 .68.37 2.94 2.94 0 0 1 .53.46 5.07 5.07 0 0 1 .5.65q.25.38.57.95l1.9 3.29h-1.74l-1.65-2.87A12.07 12.07 0 0 0 200 13a3.32 3.32 0 0 0-.63-.67 1.84 1.84 0 0 0-.68-.34 3.59 3.59 0 0 0-.86-.09V17h-1.53zM206.23 6.3h3.33a4.3 4.3 0 0 1 1.51.24 2.92 2.92 0 0 1 1.06.66 2.62 2.62 0 0 1 .62 1 3.49 3.49 0 0 1 .2 1.19 3.18 3.18 0 0 1-.21 1.17 2.48 2.48 0 0 1-.66.95 3.19 3.19 0 0 1-1.12.63 4.94 4.94 0 0 1-1.61.23h-1.59V17h-1.53zm1.53 1.37V11h1.73a2.55 2.55 0 0 0 .77-.11 1.61 1.61 0 0 0 .59-.33 1.47 1.47 0 0 0 .38-.53 1.79 1.79 0 0 0 .13-.71 2 2 0 0 0-.09-.58 1.36 1.36 0 0 0-.3-.52 1.53 1.53 0 0 0-.56-.38 2.26 2.26 0 0 0-.87-.14zM218.66 6.24L223.43 17h-1.56l-1.42-3.14h-4.53L214.58 17H213l4.58-10.71zm-.56 2.34l-1.59 3.86h3.31zM225.44 6.3H227V17h-1.53zM238.93 6.3V17h-1.53v-4.69h-6V17h-1.53V6.3h1.53v4.64h6V6.3zM246.59 6.24L251.36 17h-1.56l-1.42-3.14h-4.53L242.5 17h-1.56l4.58-10.71zM246 8.58l-1.59 3.86h3.31zM224.77 2.66a.88.88 0 0 0-.64.25.85.85 0 0 0-.27.63.9.9 0 0 0 .9.9.85.85 0 0 0 .64-.27.89.89 0 0 0 .25-.63.87.87 0 0 0-.89-.89zM228.31 2.92a.87.87 0 0 0-.64-.26.88.88 0 0 0-.64.25.85.85 0 0 0-.27.63.9.9 0 0 0 .9.9.85.85 0 0 0 .64-.27.89.89 0 0 0 .25-.63.87.87 0 0 0-.24-.62z">
                  </path>
                </g>
              </svg>
              <span role="text"
                    class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
              >
                <span lang="en-GB">
                  BBC News
                </span>
                ,
                Україна
              </span>
            </a>
            <a dir="ltr"
               href="#content"
               class="SkipLink-wmpyxz-0 foxPXR"
            >
              Перейти до змісту
            </a>
          </div>
        </div>
        <nav role="navigation"
             dir="ltr"
             id="si-nav"
             class="StyledNav-sc-158x7z5-5 jTxPjl"
        >
          <div class="NavWrapper-sc-158x7z5-0 ermFdP">
            <amp-state id="menuState">
              <script type="application/json">
                {"expanded":false}
              </script>
            </amp-state>
            <button type="button"
                    aria-expanded="false"
                    data-amp-bind-aria-expanded="menuState.expanded ? &quot;true&quot; : &quot;false&quot;"
                    on="tap:AMP.setState({ menuState: { expanded: !menuState.expanded }}),
        si-nav-dropdown-menu.toggleVisibility,
        si-nav-scrollable.toggleClass(class=si-nav-scrollable-hidden),
        si-nav.toggleClass(class=si-nav-open)
      "
                    dir="ltr"
                    class="MenuButton-ukxuly-6 dGlJrg"
            >
              <svg focusable="false"
                   width="2.75rem"
                   height="2.75rem"
                   viewbox="0 0 44 44"
                   aria-hidden="true"
                   data-amp-bind-hidden="menuState.expanded"
                   class="MenuIcon-sc-1nq0eki-0 gKIQph"
              >
                <path d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z">
                </path>
              </svg>
              <svg focusable="false"
                   width="2.75rem"
                   height="2.75rem"
                   viewbox="0 0 44 44"
                   aria-hidden="true"
                   hidden
                   data-amp-bind-hidden="!menuState.expanded"
                   class="MenuIcon-sc-1nq0eki-0 gKIQph"
              >
                <path d="M26.741 15L21.6 20.142 16.458 15 15 16.458l5.142 5.142L15 26.742l1.458 1.458 5.142-5.141 5.141 5.141 1.459-1.458-5.142-5.142 5.142-5.142z"
                      fill-rule="evenodd"
                >
                </path>
              </svg>
              <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                Розділи
              </span>
            </button>
            <div id="si-nav-dropdown-menu"
                 hidden
                 class="AmpDropdown-ukxuly-1 dMLYwY"
            >
              <ul role="list"
                  class="DropdownUl-ukxuly-2 louIo"
              >
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/ukrainian"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Новини
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/ukrainian/topics/0f469e6a-d4a6-46f2-b727-2bd039cb6b53"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Наука
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/ukrainian/topics/31684f19-84d6-41f6-b033-7ae08098572a"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Технології
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/ukrainian/topics/c4794229-7f87-43ce-ac0a-6cfcd6d3cef2"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Здоров’я
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/ukrainian/magazine"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Журнал
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/ukrainian/features-50320117"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Книга року ВВС
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/ukrainian/blogs"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Блоги
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/ukrainian/ukraine_in_russian"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    РУС
                  </a>
                </li>
              </ul>
            </div>
            <div dir="ltr"
                 id="si-nav-scrollable"
                 class="StyledScrollableNav-sc-1nc6e54-0 hGNZJz StyledAmpScrollableNavigation-thcau0-0 eHufvQ"
            >
              <ul role="list"
                  class="StyledUnorderedList-sc-158x7z5-1 ckFfoH"
              >
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/ukrainian"
                     class="StyledLink-sc-158x7z5-2 gLWckh"
                  >
                    Новини
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/ukrainian/topics/0f469e6a-d4a6-46f2-b727-2bd039cb6b53"
                     class="StyledLink-sc-158x7z5-2 gLWckh"
                  >
                    Наука
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/ukrainian/topics/31684f19-84d6-41f6-b033-7ae08098572a"
                     class="StyledLink-sc-158x7z5-2 gLWckh"
                  >
                    Технології
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/ukrainian/topics/c4794229-7f87-43ce-ac0a-6cfcd6d3cef2"
                     class="StyledLink-sc-158x7z5-2 gLWckh"
                  >
                    Здоров’я
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/ukrainian/magazine"
                     class="StyledLink-sc-158x7z5-2 gLWckh"
                  >
                    Журнал
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/ukrainian/features-50320117"
                     class="StyledLink-sc-158x7z5-2 gLWckh"
                  >
                    Книга року ВВС
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/ukrainian/blogs"
                     class="StyledLink-sc-158x7z5-2 gLWckh"
                  >
                    Блоги
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/ukrainian/ukraine_in_russian"
                     class="StyledLink-sc-158x7z5-2 gLWckh"
                  >
                    РУС
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </nav>
      </header>
      <amp-analytics>
        <script type="application/json">
          {"transport":{"beacon":false,"xhrpost":false,"image":true},"requests":{"base":"https://logws1363.ati-host.net?","pageview":"\${base}s=598343&s2=94&p=ukrainian.articles.cp4l2mrejvdo.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x1=[urn:bbc:optimo:cp4l2mrejvdo]&x2=[amp]&x3=[news-ukrainian]&x4=[uk]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[article]&x8=[simorgh]&x9=[Це+заголовок+цієї+тестової+статті]&x11=[2020-01-08T10:07:49.451Z]&x12=[2020-01-08T10:07:49.451Z]"},"triggers":{"trackPageview":{"on":"visible","request":"pageview"}}}
        </script>
      </amp-analytics>
      <amp-analytics type="chartbeat">
        <script type="application/json">
          {"vars":{"domain":"test.bbc.co.uk","sections":"Ukrainian, Ukrainian - ART","uid":50924,"title":"Це заголовок цієї тестової статті","virtualReferrer":"\${documentReferrer}","contentType":"New Article"}}
        </script>
      </amp-analytics>
      <main role="main"
            class="StyledMain-sc-1onvfv8-0 hAQCOp"
      >
        <div class="GridWrapper-sc-12lwanc-0 hgpaqH">
          <div class="GridItemConstrainedLarge-sc-12lwanc-4 gVouae">
            <h1 id="content"
                tabindex="-1"
                class="Headline-sc-1kh1qhu-0 StyledHeadline-sc-1ffcmag-0 jsOCZS"
            >
              Це заголовок цієї тестової статті
            </h1>
          </div>
          <div class="GridItemConstrainedLargeNoMargin-sc-12lwanc-5 tOkbK">
            <figure class="Figure-sc-6a3dhy-0 gJUCFc">
              <div class="NestedGridParentLarge-sc-12lwanc-10 hfLVVX">
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 fkKpIa">
                  <div class="ImagePlaceholder-sc-11u25v2-0 fNqlUz">
                    <amp-img alt="Це тестове зображення, авторське право BBC, показує карту Франції. Зображення знаходиться в перших трьох блоках і має цей підпис."
                             attribution
                             layout="responsive"
                             src="https://ichef.bbci.co.uk/news/640/cpsdevpb/340d/test/8f2169c0-31fd-11ea-8512-1f30fd3689d9.jpg"
                             height="351"
                             width="624"
                    >
                    </amp-img>
                  </div>
                </div>
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 ichKJL">
                  <figcaption class="Caption-sc-16x70so-0 bjgllj">
                    <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                      Підпис до фото,
                    </span>
                    <p>
                      Це тестове зображення, авторське право BBC, показує карту Франції. Зображення знаходиться в перших трьох блоках і має цей підпис.
                    </p>
                  </figcaption>
                </div>
              </div>
            </figure>
          </div>
          <div class="PopOutAtGroup5-sc-12lwanc-13 fvtaWN">
            <time datetime="2020-01-08"
                  class="StyledTimestamp-um718p-0 bAgcOD"
            >
              8 січня 2020
            </time>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <p class="Paragraph-k859h4-0 hymSIv">
              Це текстовий блок, який містить посилання URL на головну сторінку
              <a href="https://www.bbc.co.uk/weather"
                 class="InlineLink-hkwpaz-0 idscKS"
              >
                BBC Weather
              </a>
              .
            </p>
          </div>
          <div class="GridItemConstrainedMediumNoMargin-sc-12lwanc-3 ijtfss">
            <figure class="Figure-sc-6a3dhy-0 gJUCFc">
              <div class="StyledVideoContainer-sc-13p1a4d-0 bpuDKK">
                <amp-iframe sandbox="allow-scripts allow-same-origin"
                            layout="fill"
                            scrolling="no"
                            frameborder="0"
                            src="https://polling.test.bbc.co.uk/ws/av-embeds/articles/cp4l2mrejvdo/p01plq00/uk/amp"
                            title="Медіаплеєр"
                            allowfullscreen="allowfullscreen"
                >
                  <amp-img srcset="https://ichef.test.bbci.co.uk/images/ic/240xn/p012zl0f.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/320xn/p012zl0f.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/480xn/p012zl0f.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/624xn/p012zl0f.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/800xn/p012zl0f.jpg 800w"
                           layout="fill"
                           src="https://ichef.test.bbci.co.uk/images/ic/512xn/p012zl0f.jpg"
                           placeholder="true"
                           alt
                           height="16"
                           width="9"
                           attribution
                  >
                  </amp-img>
                  <noscript>
                    <div class="StyledWrapper-sc-1pnftlt-0 jywlaE">
                      <img srcset="https://ichef.test.bbci.co.uk/images/ic/240xn/p012zl0f.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/320xn/p012zl0f.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/480xn/p012zl0f.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/624xn/p012zl0f.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/800xn/p012zl0f.jpg 800w"
                           alt
                           src="https://ichef.test.bbci.co.uk/images/ic/512xn/p012zl0f.jpg"
                           aria-hidden="true"
                           class="StyledImg-sc-7vx2mr-0 hIxkbt"
                      >
                      <div class="MessageWrapper-sc-1pnftlt-1 bHbRwS">
                        <strong class="StyledMessage-sc-1pnftlt-2 iRlUPR">
                          Ваш пристрій не підтримує відтворення мультимедійних файлів
                        </strong>
                      </div>
                    </div>
                  </noscript>
                </amp-iframe>
              </div>
              <figcaption class="Caption-sc-16x70so-0 bjgllj">
                <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                  Підпис до відео,
                </span>
                <p>
                  Це підзаголовок
                </p>
              </figcaption>
            </figure>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <h2 id="Це-підзаголовок"
                tabindex="-1"
                class="SubHeading-sc-1kh1qhu-1 jHLqCp"
            >
              Це підзаголовок
            </h2>
          </div>
          <div class="GridItemConstrainedLargeNoMargin-sc-12lwanc-5 tOkbK">
            <figure class="Figure-sc-6a3dhy-0 gJUCFc">
              <div class="NestedGridParentLarge-sc-12lwanc-10 hfLVVX">
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 fkKpIa">
                  <div class="ImagePlaceholder-sc-11u25v2-0 fNqlUz">
                    <amp-img alt="Це підзаголовок"
                             attribution="Getty Images"
                             layout="responsive"
                             src="https://ichef.bbci.co.uk/news/640/cpsdevpb/e196/test/0ccfca60-31fe-11ea-8512-1f30fd3689d9.jpg"
                             height="450"
                             width="800"
                    >
                    </amp-img>
                    <p role="text"
                       class="Copyright-sc-11lgtw-0 hDvIfz"
                    >
                      <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                        Автор фото,
                      </span>
                      <span lang="en-GB">
                        Getty Images
                      </span>
                    </p>
                  </div>
                </div>
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 ichKJL">
                </div>
              </div>
            </figure>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <p class="Paragraph-k859h4-0 hymSIv">
              Ця тестова стаття створена для того, щоб ми могли запускати автоматизовані тестові тести на нашому веб-сайті.
            </p>
          </div>
        </div>
      </main>
      <footer role="contentinfo">
        <div class="Banner-m3awbo-1 gpxnCd">
          <div class="SvgWrapper-m3awbo-0 dPXtDJ">
            <a href="/ukrainian"
               class="StyledLink-m3awbo-2 hsAGLj"
            >
              <svg height="24"
                   viewbox="0 0 251.36 24"
                   xmlns="http://www.w3.org/2000/svg"
                   focusable="false"
                   aria-hidden="true"
                   class="BrandSvg-m3awbo-3 cOdfGG"
              >
                <g fill-rule="evenodd"
                   stroke="#000"
                   stroke-width=".335"
                   style="stroke:#fff"
                >
                  <path d="M76.73.28v21.85H53.51V.28zm-4.62 14.58l-.37.23a10.85 10.85 0 0 1-5.53 1.69c-3.8 0-6.31-2.27-6.32-5.55s2.62-5.58 6.22-5.59a10.93 10.93 0 0 1 5.47 1.56l.36.2V4.47l-.16-.06a15.06 15.06 0 0 0-5.65-1.27 9.62 9.62 0 0 0-6.53 2.34 7.9 7.9 0 0 0-2.59 6 7.7 7.7 0 0 0 2.16 5.17A9.1 9.1 0 0 0 66 19.28a12.73 12.73 0 0 0 6-1.37l.14-.07zM50 .28v21.85H26.75V.28zm-5.54 14.48A4.21 4.21 0 0 0 41 10.69a3.87 3.87 0 0 0 1.35-1.08A3.41 3.41 0 0 0 43 7.47a3.8 3.8 0 0 0-1.27-2.85 5.76 5.76 0 0 0-4-1.29h-4.89v15.75h5.81a6.54 6.54 0 0 0 4.46-1.39 3.88 3.88 0 0 0 1.35-2.93z">
                  </path>
                  <path d="M41.57 14.45a1.86 1.86 0 0 1-.63 1.45 3.85 3.85 0 0 1-2.6.72h-2.68v-4.3h2.56a4.45 4.45 0 0 1 2.57.62 1.76 1.76 0 0 1 .78 1.51zM39.4 9.31a1.84 1.84 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57h-1.9v4.07H37a4.21 4.21 0 0 0 2.4-.56zM23.22.28v21.85H0V.28zM17.7 14.76a4.21 4.21 0 0 0-3.43-4.07 3.86 3.86 0 0 0 1.35-1.08 3.41 3.41 0 0 0 .65-2.13A3.8 3.8 0 0 0 15 4.63a5.76 5.76 0 0 0-4-1.29H6v15.74h5.9a6.54 6.54 0 0 0 4.46-1.39 3.89 3.89 0 0 0 1.34-2.93z">
                  </path>
                  <path d="M12.64 9.31a1.85 1.85 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57H8.91v4.07h1.3a4.21 4.21 0 0 0 2.43-.56zM14 12.94a4.45 4.45 0 0 0-2.57-.62H8.91v4.29h2.68a3.85 3.85 0 0 0 2.6-.72 1.86 1.86 0 0 0 .63-1.45 1.76 1.76 0 0 0-.82-1.5zM101 3.34h2.15v15.78h-1.94L90.69 7v12.12h-2.12V3.34h1.83L101 15.6zM107.26 3.34h8.95v2h-6.69v4.81H116v2h-6.46v4.9h6.9v2h-9.16zM140.33 3.34h2.25l-6.38 15.85h-.5l-5.16-12.84-5.21 12.84h-.49l-6.36-15.85h2.28l4.35 10.88 4.38-10.88h2.14L136 14.22zM148.7 12.51l-1.72-1a7.8 7.8 0 0 1-2.3-1.94 3.68 3.68 0 0 1-.68-2.2 3.88 3.88 0 0 1 1.29-3 4.83 4.83 0 0 1 3.36-1.16 6.36 6.36 0 0 1 3.63 1.11v2.49a5.23 5.23 0 0 0-3.67-1.64 3 3 0 0 0-1.82.51 1.55 1.55 0 0 0-.71 1.32 2 2 0 0 0 .52 1.33 6.6 6.6 0 0 0 1.69 1.3l1.73 1q2.89 1.73 2.89 4.39a4 4 0 0 1-1.27 3.08 4.65 4.65 0 0 1-3.3 1.19 6.94 6.94 0 0 1-4.26-1.44V15a5.32 5.32 0 0 0 4.24 2.32 2.66 2.66 0 0 0 1.77-.59 1.85 1.85 0 0 0 .71-1.48q-.02-1.45-2.1-2.74z">
                  </path>
                  <path d="M168.37 0v22.59"
                        stroke-width="2"
                  >
                  </path>
                  <path d="M185.76 6.3l3.83 8.91 3.14-8.91h1.49l-4 10.65a7.39 7.39 0 0 1-.51 1.1 3.16 3.16 0 0 1-.59.75 2.11 2.11 0 0 1-.7.43 2.49 2.49 0 0 1-.85.14 2.54 2.54 0 0 1-.75-.1 2.37 2.37 0 0 1-.59-.27v-1.38a1.54 1.54 0 0 0 .59.38 2.43 2.43 0 0 0 .81.12A1 1 0 0 0 188 18a1.42 1.42 0 0 0 .38-.23 1.57 1.57 0 0 0 .32-.37 1.14 1.14 0 0 0 .17-.49L184.23 6.3zM196.3 6.3h1.53v4.33a3.73 3.73 0 0 0 .77-.07 1.58 1.58 0 0 0 .62-.28 2.14 2.14 0 0 0 .51-.58 5.79 5.79 0 0 0 .47-1 6.94 6.94 0 0 1 .58-1.18 3 3 0 0 1 .66-.75 2.19 2.19 0 0 1 .8-.4 4 4 0 0 1 1-.11h.24v1.41a3.1 3.1 0 0 0-.85.1 1.31 1.31 0 0 0-.55.31 1.77 1.77 0 0 0-.38.54q-.16.33-.32.8a3.77 3.77 0 0 1-.26.57 4.23 4.23 0 0 1-.35.54 3.49 3.49 0 0 1-.41.45 1.67 1.67 0 0 1-.44.3 5 5 0 0 1 .68.37 2.94 2.94 0 0 1 .53.46 5.07 5.07 0 0 1 .5.65q.25.38.57.95l1.9 3.29h-1.74l-1.65-2.87A12.07 12.07 0 0 0 200 13a3.32 3.32 0 0 0-.63-.67 1.84 1.84 0 0 0-.68-.34 3.59 3.59 0 0 0-.86-.09V17h-1.53zM206.23 6.3h3.33a4.3 4.3 0 0 1 1.51.24 2.92 2.92 0 0 1 1.06.66 2.62 2.62 0 0 1 .62 1 3.49 3.49 0 0 1 .2 1.19 3.18 3.18 0 0 1-.21 1.17 2.48 2.48 0 0 1-.66.95 3.19 3.19 0 0 1-1.12.63 4.94 4.94 0 0 1-1.61.23h-1.59V17h-1.53zm1.53 1.37V11h1.73a2.55 2.55 0 0 0 .77-.11 1.61 1.61 0 0 0 .59-.33 1.47 1.47 0 0 0 .38-.53 1.79 1.79 0 0 0 .13-.71 2 2 0 0 0-.09-.58 1.36 1.36 0 0 0-.3-.52 1.53 1.53 0 0 0-.56-.38 2.26 2.26 0 0 0-.87-.14zM218.66 6.24L223.43 17h-1.56l-1.42-3.14h-4.53L214.58 17H213l4.58-10.71zm-.56 2.34l-1.59 3.86h3.31zM225.44 6.3H227V17h-1.53zM238.93 6.3V17h-1.53v-4.69h-6V17h-1.53V6.3h1.53v4.64h6V6.3zM246.59 6.24L251.36 17h-1.56l-1.42-3.14h-4.53L242.5 17h-1.56l4.58-10.71zM246 8.58l-1.59 3.86h3.31zM224.77 2.66a.88.88 0 0 0-.64.25.85.85 0 0 0-.27.63.9.9 0 0 0 .9.9.85.85 0 0 0 .64-.27.89.89 0 0 0 .25-.63.87.87 0 0 0-.89-.89zM228.31 2.92a.87.87 0 0 0-.64-.26.88.88 0 0 0-.64.25.85.85 0 0 0-.27.63.9.9 0 0 0 .9.9.85.85 0 0 0 .64-.27.89.89 0 0 0 .25-.63.87.87 0 0 0-.24-.62z">
                  </path>
                </g>
              </svg>
              <span role="text"
                    class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
              >
                <span lang="en-GB">
                  BBC News
                </span>
                ,
                Україна
              </span>
            </a>
          </div>
        </div>
        <div class="SitewideLinksWrapper-sc-1gggobt-0 gccobV">
          <div class="ConstrainedWrapper-sc-1gggobt-1 bpERjU">
            <ul role="list"
                class="StyledList-sc-2e1ekc-0 bmlrLC"
            >
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/ukrainian/institutional-50170368"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Чому BBC заслуговує на довіру
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/ukrainian/institutional-38144387"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Правила користування
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/ukrainian/institutional-38144827"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Особисті дані
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/usingthebbc/cookies/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Cookies
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/ukrainian/institutional-38146278"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Зв'язатися з BBC
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a lang="en-GB"
                   href="https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    AdChoices / Do Not Sell My Info
                  </span>
                </a>
              </li>
            </ul>
            <p class="StyledParagraph-sc-1gggobt-2 jQPFnr">
              <span lang="en-GB">
                ©
              </span>
              2020 BBC. ВВС не несе відповідальності за контент інших сайтів.
              <a href="https://www.bbc.co.uk/help/web/links/"
                 class="StyledLink-nhmg8j-0 jHQlUp"
              >
                <span class="StyleLinkText-nhmg8j-1 fPnERB">
                  Ознайомтеся з нашими правилами зовнішніх посилань.
                </span>
              </a>
            </p>
          </div>
        </div>
      </footer>
    </div>
  </body>
</html>
`;

exports[`Snapshot test for /ukrainian/articles/cp4l2mrejvdo For the Canonical platform I can see the server-rendered HTML 1`] = `
<html lang="uk"
      class="no-js"
      dir="ltr"
>
  <head>
    <meta data-react-helmet="true"
          http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta data-react-helmet="true"
          charset="utf-8"
    >
    <meta data-react-helmet="true"
          name="robots"
          content="noodp,noydir"
    >
    <meta data-react-helmet="true"
          name="theme-color"
          content="#B80000"
    >
    <meta data-react-helmet="true"
          name="viewport"
          content="width=device-width, initial-scale=1, minimum-scale=1"
    >
    <meta data-react-helmet="true"
          name="apple-mobile-web-app-title"
          content="BBC News Україна"
    >
    <meta data-react-helmet="true"
          name="application-name"
          content="BBC News Україна"
    >
    <meta data-react-helmet="true"
          name="description"
          content="Це заголовок цієї тестової статті"
    >
    <meta data-react-helmet="true"
          property="fb:admins"
          content="100004154058350"
    >
    <meta data-react-helmet="true"
          property="fb:app_id"
          content="1609039196070050"
    >
    <meta data-react-helmet="true"
          name="mobile-web-app-capable"
          content="yes"
    >
    <meta data-react-helmet="true"
          name="msapplication-TileColor"
          content="#B80000"
    >
    <meta data-react-helmet="true"
          name="msapplication-TileImage"
          content="https://news.files.bbci.co.uk/include/articles/public/ukrainian/images/icons/icon-144x144.png"
    >
    <meta data-react-helmet="true"
          property="og:description"
          content="Це заголовок цієї тестової статті"
    >
    <meta data-react-helmet="true"
          property="og:image"
          content="https://news.files.bbci.co.uk/ws/img/logos/og/ukrainian.png"
    >
    <meta data-react-helmet="true"
          property="og:image:alt"
          content="BBC News Україна"
    >
    <meta data-react-helmet="true"
          property="og:locale"
          content="uk-UA"
    >
    <meta data-react-helmet="true"
          property="og:site_name"
          content="BBC News Україна"
    >
    <meta data-react-helmet="true"
          property="og:title"
          content="Це заголовок цієї тестової статті - BBC News Україна"
    >
    <meta data-react-helmet="true"
          property="og:type"
          content="article"
    >
    <meta data-react-helmet="true"
          property="og:url"
          content="http://localhost:7080/ukrainian/articles/cp4l2mrejvdo"
    >
    <meta data-react-helmet="true"
          name="twitter:card"
          content="summary_large_image"
    >
    <meta data-react-helmet="true"
          name="twitter:creator"
          content="@BBC_ua"
    >
    <meta data-react-helmet="true"
          name="twitter:description"
          content="Це заголовок цієї тестової статті"
    >
    <meta data-react-helmet="true"
          name="twitter:image:alt"
          content="BBC News Україна"
    >
    <meta data-react-helmet="true"
          name="twitter:image:src"
          content="https://news.files.bbci.co.uk/ws/img/logos/og/ukrainian.png"
    >
    <meta data-react-helmet="true"
          name="twitter:site"
          content="@BBC_ua"
    >
    <meta data-react-helmet="true"
          name="twitter:title"
          content="Це заголовок цієї тестової статті - BBC News Україна"
    >
    <meta data-react-helmet="true"
          name="article:author"
          content="http://www.facebook.com/bbcnews"
    >
    <meta data-react-helmet="true"
          name="article:modified_time"
          content="2020-01-08T10:07:49.451Z"
    >
    <meta data-react-helmet="true"
          name="article:published_time"
          content="2020-01-08T10:07:49.451Z"
    >
    <link rel="shortcut icon"
          href="/favicon.ico"
          type="image/x-icon"
    >
    <link rel="preconnect"
          href="https://ichef.bbci.co.uk"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://ichef.bbci.co.uk"
    >
    <link rel="preconnect"
          href="http://localhost:7080"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="http://localhost:7080"
    >
    <link rel="preconnect"
          href="https://logws1363.ati-host.net?"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://logws1363.ati-host.net?"
    >
    <title data-react-helmet="true">
      Це заголовок цієї тестової статті - BBC News Україна
    </title>
    <link data-react-helmet="true"
          rel="manifest"
          href="/ukrainian/manifest.json"
    >
    <link data-react-helmet="true"
          rel="canonical"
          href="http://localhost:7080/ukrainian/articles/cp4l2mrejvdo"
    >
    <link data-react-helmet="true"
          rel="amphtml"
          href="http://localhost:7080/ukrainian/articles/cp4l2mrejvdo.amp"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          href="http://localhost:7080/ukrainian/images/icons/icon-192x192.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="72x72"
          href="https://news.files.bbci.co.uk/include/articles/public/ukrainian/images/icons/icon-72x72.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="96x96"
          href="https://news.files.bbci.co.uk/include/articles/public/ukrainian/images/icons/icon-96x96.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="128x128"
          href="https://news.files.bbci.co.uk/include/articles/public/ukrainian/images/icons/icon-128x128.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="144x144"
          href="https://news.files.bbci.co.uk/include/articles/public/ukrainian/images/icons/icon-144x144.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="152x152"
          href="https://news.files.bbci.co.uk/include/articles/public/ukrainian/images/icons/icon-152x152.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="192x192"
          href="https://news.files.bbci.co.uk/include/articles/public/ukrainian/images/icons/icon-192x192.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="384x384"
          href="https://news.files.bbci.co.uk/include/articles/public/ukrainian/images/icons/icon-384x384.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="512x512"
          href="https://news.files.bbci.co.uk/include/articles/public/ukrainian/images/icons/icon-512x512.png"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/ukrainian/images/icons/icon-72x72.png"
          sizes="72x72"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/ukrainian/images/icons/icon-96x96.png"
          sizes="96x96"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/ukrainian/images/icons/icon-192x192.png"
          sizes="192x192"
    >
    <link data-react-helmet="true"
          rel="apple-touch-startup-image"
          href="https://news.files.bbci.co.uk/include/articles/public/ukrainian/images/icons/icon-512x512.png"
    >
    <link data-react-helmet="true"
          rel="shortcut icon"
          href="/favicon.ico"
          type="image/x-icon"
    >
    <script data-react-helmet="true"
            type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"Article","url":"http://localhost:7080/ukrainian/articles/cp4l2mrejvdo","publisher":{"@type":"NewsMediaOrganization","name":"BBC News Україна","publishingPrinciples":"https://www.bbc.com/ukrainian/institutional-50170368","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/ukrainian.png"}},"image":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/ukrainian.png"},"thumbnailUrl":"https://news.files.bbci.co.uk/ws/img/logos/og/ukrainian.png","mainEntityOfPage":{"@type":"WebPage","@id":"http://localhost:7080/ukrainian/articles/cp4l2mrejvdo","name":"Це заголовок цієї тестової статті"},"headline":"Це заголовок цієї тестової статті","datePublished":"2020-01-08T10:07:49.451Z","dateModified":"2020-01-08T10:07:49.451Z","author":{"@type":"NewsMediaOrganization","name":"BBC News Україна","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/ukrainian.png"},"noBylinesPolicy":"https://www.bbc.com/ukrainian/institutional-50170368#authorexpertise"}}
    </script>
    <script data-react-helmet="true"
            type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"VideoObject","name":"Test Ukrainian","description":"Test Ukrainian","duration":"PT29S","thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p012zl0f.jpg","uploadDate":"2019-12-03T16:04:31.000Z","embedURL":"https://polling.test.bbc.co.uk/ws/av-embeds/articles/cp4l2mrejvdo/p01plq00/uk"}
    </script>
  </head>
  <body>
    <div id="root"
         class="StyledDiv-sc-1dngwtn-0 riLLS"
    >
      <header role="banner">
        <div class="Banner-m3awbo-1 fDRnKv">
          <div class="SvgWrapper-m3awbo-0 dPXtDJ">
            <a href="/ukrainian"
               class="StyledLink-m3awbo-2 hsAGLj"
            >
              <svg height="24"
                   viewbox="0 0 251.36 24"
                   xmlns="http://www.w3.org/2000/svg"
                   focusable="false"
                   aria-hidden="true"
                   class="BrandSvg-m3awbo-3 cOdfGG"
              >
                <g fill-rule="evenodd"
                   stroke="#000"
                   stroke-width=".335"
                   style="stroke:#fff"
                >
                  <path d="M76.73.28v21.85H53.51V.28zm-4.62 14.58l-.37.23a10.85 10.85 0 0 1-5.53 1.69c-3.8 0-6.31-2.27-6.32-5.55s2.62-5.58 6.22-5.59a10.93 10.93 0 0 1 5.47 1.56l.36.2V4.47l-.16-.06a15.06 15.06 0 0 0-5.65-1.27 9.62 9.62 0 0 0-6.53 2.34 7.9 7.9 0 0 0-2.59 6 7.7 7.7 0 0 0 2.16 5.17A9.1 9.1 0 0 0 66 19.28a12.73 12.73 0 0 0 6-1.37l.14-.07zM50 .28v21.85H26.75V.28zm-5.54 14.48A4.21 4.21 0 0 0 41 10.69a3.87 3.87 0 0 0 1.35-1.08A3.41 3.41 0 0 0 43 7.47a3.8 3.8 0 0 0-1.27-2.85 5.76 5.76 0 0 0-4-1.29h-4.89v15.75h5.81a6.54 6.54 0 0 0 4.46-1.39 3.88 3.88 0 0 0 1.35-2.93z">
                  </path>
                  <path d="M41.57 14.45a1.86 1.86 0 0 1-.63 1.45 3.85 3.85 0 0 1-2.6.72h-2.68v-4.3h2.56a4.45 4.45 0 0 1 2.57.62 1.76 1.76 0 0 1 .78 1.51zM39.4 9.31a1.84 1.84 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57h-1.9v4.07H37a4.21 4.21 0 0 0 2.4-.56zM23.22.28v21.85H0V.28zM17.7 14.76a4.21 4.21 0 0 0-3.43-4.07 3.86 3.86 0 0 0 1.35-1.08 3.41 3.41 0 0 0 .65-2.13A3.8 3.8 0 0 0 15 4.63a5.76 5.76 0 0 0-4-1.29H6v15.74h5.9a6.54 6.54 0 0 0 4.46-1.39 3.89 3.89 0 0 0 1.34-2.93z">
                  </path>
                  <path d="M12.64 9.31a1.85 1.85 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57H8.91v4.07h1.3a4.21 4.21 0 0 0 2.43-.56zM14 12.94a4.45 4.45 0 0 0-2.57-.62H8.91v4.29h2.68a3.85 3.85 0 0 0 2.6-.72 1.86 1.86 0 0 0 .63-1.45 1.76 1.76 0 0 0-.82-1.5zM101 3.34h2.15v15.78h-1.94L90.69 7v12.12h-2.12V3.34h1.83L101 15.6zM107.26 3.34h8.95v2h-6.69v4.81H116v2h-6.46v4.9h6.9v2h-9.16zM140.33 3.34h2.25l-6.38 15.85h-.5l-5.16-12.84-5.21 12.84h-.49l-6.36-15.85h2.28l4.35 10.88 4.38-10.88h2.14L136 14.22zM148.7 12.51l-1.72-1a7.8 7.8 0 0 1-2.3-1.94 3.68 3.68 0 0 1-.68-2.2 3.88 3.88 0 0 1 1.29-3 4.83 4.83 0 0 1 3.36-1.16 6.36 6.36 0 0 1 3.63 1.11v2.49a5.23 5.23 0 0 0-3.67-1.64 3 3 0 0 0-1.82.51 1.55 1.55 0 0 0-.71 1.32 2 2 0 0 0 .52 1.33 6.6 6.6 0 0 0 1.69 1.3l1.73 1q2.89 1.73 2.89 4.39a4 4 0 0 1-1.27 3.08 4.65 4.65 0 0 1-3.3 1.19 6.94 6.94 0 0 1-4.26-1.44V15a5.32 5.32 0 0 0 4.24 2.32 2.66 2.66 0 0 0 1.77-.59 1.85 1.85 0 0 0 .71-1.48q-.02-1.45-2.1-2.74z">
                  </path>
                  <path d="M168.37 0v22.59"
                        stroke-width="2"
                  >
                  </path>
                  <path d="M185.76 6.3l3.83 8.91 3.14-8.91h1.49l-4 10.65a7.39 7.39 0 0 1-.51 1.1 3.16 3.16 0 0 1-.59.75 2.11 2.11 0 0 1-.7.43 2.49 2.49 0 0 1-.85.14 2.54 2.54 0 0 1-.75-.1 2.37 2.37 0 0 1-.59-.27v-1.38a1.54 1.54 0 0 0 .59.38 2.43 2.43 0 0 0 .81.12A1 1 0 0 0 188 18a1.42 1.42 0 0 0 .38-.23 1.57 1.57 0 0 0 .32-.37 1.14 1.14 0 0 0 .17-.49L184.23 6.3zM196.3 6.3h1.53v4.33a3.73 3.73 0 0 0 .77-.07 1.58 1.58 0 0 0 .62-.28 2.14 2.14 0 0 0 .51-.58 5.79 5.79 0 0 0 .47-1 6.94 6.94 0 0 1 .58-1.18 3 3 0 0 1 .66-.75 2.19 2.19 0 0 1 .8-.4 4 4 0 0 1 1-.11h.24v1.41a3.1 3.1 0 0 0-.85.1 1.31 1.31 0 0 0-.55.31 1.77 1.77 0 0 0-.38.54q-.16.33-.32.8a3.77 3.77 0 0 1-.26.57 4.23 4.23 0 0 1-.35.54 3.49 3.49 0 0 1-.41.45 1.67 1.67 0 0 1-.44.3 5 5 0 0 1 .68.37 2.94 2.94 0 0 1 .53.46 5.07 5.07 0 0 1 .5.65q.25.38.57.95l1.9 3.29h-1.74l-1.65-2.87A12.07 12.07 0 0 0 200 13a3.32 3.32 0 0 0-.63-.67 1.84 1.84 0 0 0-.68-.34 3.59 3.59 0 0 0-.86-.09V17h-1.53zM206.23 6.3h3.33a4.3 4.3 0 0 1 1.51.24 2.92 2.92 0 0 1 1.06.66 2.62 2.62 0 0 1 .62 1 3.49 3.49 0 0 1 .2 1.19 3.18 3.18 0 0 1-.21 1.17 2.48 2.48 0 0 1-.66.95 3.19 3.19 0 0 1-1.12.63 4.94 4.94 0 0 1-1.61.23h-1.59V17h-1.53zm1.53 1.37V11h1.73a2.55 2.55 0 0 0 .77-.11 1.61 1.61 0 0 0 .59-.33 1.47 1.47 0 0 0 .38-.53 1.79 1.79 0 0 0 .13-.71 2 2 0 0 0-.09-.58 1.36 1.36 0 0 0-.3-.52 1.53 1.53 0 0 0-.56-.38 2.26 2.26 0 0 0-.87-.14zM218.66 6.24L223.43 17h-1.56l-1.42-3.14h-4.53L214.58 17H213l4.58-10.71zm-.56 2.34l-1.59 3.86h3.31zM225.44 6.3H227V17h-1.53zM238.93 6.3V17h-1.53v-4.69h-6V17h-1.53V6.3h1.53v4.64h6V6.3zM246.59 6.24L251.36 17h-1.56l-1.42-3.14h-4.53L242.5 17h-1.56l4.58-10.71zM246 8.58l-1.59 3.86h3.31zM224.77 2.66a.88.88 0 0 0-.64.25.85.85 0 0 0-.27.63.9.9 0 0 0 .9.9.85.85 0 0 0 .64-.27.89.89 0 0 0 .25-.63.87.87 0 0 0-.89-.89zM228.31 2.92a.87.87 0 0 0-.64-.26.88.88 0 0 0-.64.25.85.85 0 0 0-.27.63.9.9 0 0 0 .9.9.85.85 0 0 0 .64-.27.89.89 0 0 0 .25-.63.87.87 0 0 0-.24-.62z">
                  </path>
                </g>
              </svg>
              <span role="text"
                    class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
              >
                <span lang="en-GB">
                  BBC News
                </span>
                ,
                Україна
              </span>
            </a>
            <a dir="ltr"
               href="#content"
               class="SkipLink-wmpyxz-0 foxPXR"
            >
              Перейти до змісту
            </a>
          </div>
        </div>
        <nav role="navigation"
             dir="ltr"
             class="StyledNav-sc-158x7z5-5 dWucaK"
        >
          <div class="NavWrapper-sc-158x7z5-0 ermFdP">
            <div class="ScrollableWrapper-t4argr-0 UDeIc">
              <button type="button"
                      aria-expanded="false"
                      dir="ltr"
                      class="MenuButton-ukxuly-6 dGlJrg"
              >
                <svg focusable="false"
                     width="2.75rem"
                     height="2.75rem"
                     viewbox="0 0 44 44"
                     aria-hidden="true"
                     class="MenuIcon-sc-1nq0eki-0 gKIQph"
                >
                  <path d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z">
                  </path>
                </svg>
                <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                  Розділи
                </span>
              </button>
              <div dir="ltr"
                   class="StyledScrollableNav-sc-1nc6e54-0 hGNZJz"
              >
                <ul role="list"
                    class="StyledUnorderedList-sc-158x7z5-1 ckFfoH"
                >
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/ukrainian"
                       class="StyledLink-sc-158x7z5-2 gLWckh"
                    >
                      Новини
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/ukrainian/topics/0f469e6a-d4a6-46f2-b727-2bd039cb6b53"
                       class="StyledLink-sc-158x7z5-2 gLWckh"
                    >
                      Наука
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/ukrainian/topics/31684f19-84d6-41f6-b033-7ae08098572a"
                       class="StyledLink-sc-158x7z5-2 gLWckh"
                    >
                      Технології
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/ukrainian/topics/c4794229-7f87-43ce-ac0a-6cfcd6d3cef2"
                       class="StyledLink-sc-158x7z5-2 gLWckh"
                    >
                      Здоров’я
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/ukrainian/magazine"
                       class="StyledLink-sc-158x7z5-2 gLWckh"
                    >
                      Журнал
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/ukrainian/features-50320117"
                       class="StyledLink-sc-158x7z5-2 gLWckh"
                    >
                      Книга року ВВС
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/ukrainian/blogs"
                       class="StyledLink-sc-158x7z5-2 gLWckh"
                    >
                      Блоги
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/ukrainian/ukraine_in_russian"
                       class="StyledLink-sc-158x7z5-2 gLWckh"
                    >
                      РУС
                    </a>
                  </li>
                </ul>
              </div>
            </div>
            <div height="0"
                 class="StyledDropdown-ukxuly-0 NlGZD"
            >
              <ul role="list"
                  class="DropdownUl-ukxuly-2 louIo"
              >
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/ukrainian"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Новини
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/ukrainian/topics/0f469e6a-d4a6-46f2-b727-2bd039cb6b53"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Наука
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/ukrainian/topics/31684f19-84d6-41f6-b033-7ae08098572a"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Технології
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/ukrainian/topics/c4794229-7f87-43ce-ac0a-6cfcd6d3cef2"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Здоров’я
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/ukrainian/magazine"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Журнал
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/ukrainian/features-50320117"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Книга року ВВС
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/ukrainian/blogs"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Блоги
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/ukrainian/ukraine_in_russian"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    РУС
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </nav>
      </header>
      <noscript>
        <img height="1px"
             width="1px"
             alt
             style="position:absolute"
             src="https://logws1363.ati-host.net?s=598343&amp;s2=94&amp;p=ukrainian.articles.cp4l2mrejvdo.page&amp;x1=[urn:bbc:optimo:cp4l2mrejvdo]&amp;x2=[responsive]&amp;x3=[news-ukrainian]&amp;x4=[uk]&amp;x7=[article]&amp;x8=[simorgh-nojs]&amp;x9=[Це+заголовок+цієї+тестової+статті]&amp;x11=[2020-01-08T10:07:49.451Z]&amp;x12=[2020-01-08T10:07:49.451Z]"
        >
      </noscript>
      <main role="main"
            class="StyledMain-sc-1onvfv8-0 hAQCOp"
      >
        <div class="GridWrapper-sc-12lwanc-0 hgpaqH">
          <div class="GridItemConstrainedLarge-sc-12lwanc-4 gVouae">
            <h1 id="content"
                tabindex="-1"
                class="Headline-sc-1kh1qhu-0 StyledHeadline-sc-1ffcmag-0 jsOCZS"
            >
              Це заголовок цієї тестової статті
            </h1>
          </div>
          <div class="GridItemConstrainedLargeNoMargin-sc-12lwanc-5 tOkbK">
            <figure class="Figure-sc-6a3dhy-0 gJUCFc">
              <div class="NestedGridParentLarge-sc-12lwanc-10 hfLVVX">
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 fkKpIa">
                  <div class="ImagePlaceholder-sc-11u25v2-0 fNqlUz">
                    <img srcset="https://ichef.bbci.co.uk/news/240/cpsdevpb/340d/test/8f2169c0-31fd-11ea-8512-1f30fd3689d9.jpg 240w, https://ichef.bbci.co.uk/news/320/cpsdevpb/340d/test/8f2169c0-31fd-11ea-8512-1f30fd3689d9.jpg 320w, https://ichef.bbci.co.uk/news/480/cpsdevpb/340d/test/8f2169c0-31fd-11ea-8512-1f30fd3689d9.jpg 480w, https://ichef.bbci.co.uk/news/624/cpsdevpb/340d/test/8f2169c0-31fd-11ea-8512-1f30fd3689d9.jpg 624w"
                         alt="Це тестове зображення, авторське право BBC, показує карту Франції. Зображення знаходиться в перших трьох блоках і має цей підпис."
                         src="https://ichef.bbci.co.uk/news/640/cpsdevpb/340d/test/8f2169c0-31fd-11ea-8512-1f30fd3689d9.jpg"
                         width="624"
                         class="StyledImg-sc-7vx2mr-0 dQLeqZ"
                    >
                  </div>
                </div>
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 ichKJL">
                  <figcaption class="Caption-sc-16x70so-0 bjgllj">
                    <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                      Підпис до фото,
                    </span>
                    <p>
                      Це тестове зображення, авторське право BBC, показує карту Франції. Зображення знаходиться в перших трьох блоках і має цей підпис.
                    </p>
                  </figcaption>
                </div>
              </div>
            </figure>
          </div>
          <div class="PopOutAtGroup5-sc-12lwanc-13 fvtaWN">
            <time datetime="2020-01-08"
                  class="StyledTimestamp-um718p-0 bAgcOD"
            >
              8 січня 2020
            </time>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <p class="Paragraph-k859h4-0 hymSIv">
              Це текстовий блок, який містить посилання URL на головну сторінку
              <a href="https://www.bbc.co.uk/weather"
                 class="InlineLink-hkwpaz-0 idscKS"
              >
                BBC Weather
              </a>
              .
            </p>
          </div>
          <div class="GridItemConstrainedMediumNoMargin-sc-12lwanc-3 ijtfss">
            <figure class="Figure-sc-6a3dhy-0 gJUCFc">
              <div class="StyledVideoContainer-sc-13p1a4d-0 bpuDKK">
                <div class="StyledPlaceholder-sc-11nyhtu-0 dDNqOp">
                  <div class="GuidanceWrapper-sc-1wm6qsk-0 vJAJS">
                    <noscript class="StyledNoScript-sc-1wm6qsk-2 fsOOOd">
                      <strong class="GuidanceMessage-sc-1wm6qsk-1 iYcpPO">
                        Ваш пристрій не підтримує відтворення мультимедійних файлів
                      </strong>
                    </noscript>
                  </div>
                  <button class="Button-sc-34e3rb-0 eSkqnH StyledPlayButton-sc-11nyhtu-1 bBTuxK">
                    <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                      Play video, "Test Ukrainian", Тривалість 0,29
                    </span>
                    <div aria-hidden="true"
                         class="IconWrapper-sc-34e3rb-1 jGavfg"
                    >
                      <svg viewbox="0 0 32 32"
                           width="12px"
                           height="12px"
                           focusable="false"
                           aria-hidden="true"
                           class="MediaIcon-sc-10lpekz-0 VideoMediaIcon-sc-10lpekz-1 gUVBrE"
                      >
                        <polygon points="3,32 29,16 3,0">
                        </polygon>
                      </svg>
                    </div>
                    <time datetime="PT29S"
                          aria-hidden="true"
                          class="TimeDuration-sc-34e3rb-2 cZLyLe"
                    >
                      00:29
                    </time>
                  </button>
                  <img srcset="https://ichef.test.bbci.co.uk/images/ic/240xn/p012zl0f.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/320xn/p012zl0f.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/480xn/p012zl0f.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/624xn/p012zl0f.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/800xn/p012zl0f.jpg 800w"
                       alt
                       src="https://ichef.test.bbci.co.uk/images/ic/512xn/p012zl0f.jpg"
                       class="StyledImg-sc-7vx2mr-0 hIxkbt"
                  >
                </div>
              </div>
              <figcaption class="Caption-sc-16x70so-0 bjgllj">
                <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                  Підпис до відео,
                </span>
                <p>
                  Це підзаголовок
                </p>
              </figcaption>
            </figure>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <h2 id="Це-підзаголовок"
                tabindex="-1"
                class="SubHeading-sc-1kh1qhu-1 jHLqCp"
            >
              Це підзаголовок
            </h2>
          </div>
          <div class="GridItemConstrainedLargeNoMargin-sc-12lwanc-5 tOkbK">
            <figure class="Figure-sc-6a3dhy-0 gJUCFc">
              <div class="NestedGridParentLarge-sc-12lwanc-10 hfLVVX">
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 fkKpIa">
                  <div class="ImagePlaceholder-sc-11u25v2-0 fNqlUz">
                    <div class="lazyload-placeholder">
                    </div>
                    <noscript>
                      <img srcset="https://ichef.bbci.co.uk/news/240/cpsdevpb/e196/test/0ccfca60-31fe-11ea-8512-1f30fd3689d9.jpg 240w, https://ichef.bbci.co.uk/news/320/cpsdevpb/e196/test/0ccfca60-31fe-11ea-8512-1f30fd3689d9.jpg 320w, https://ichef.bbci.co.uk/news/480/cpsdevpb/e196/test/0ccfca60-31fe-11ea-8512-1f30fd3689d9.jpg 480w, https://ichef.bbci.co.uk/news/624/cpsdevpb/e196/test/0ccfca60-31fe-11ea-8512-1f30fd3689d9.jpg 624w, https://ichef.bbci.co.uk/news/800/cpsdevpb/e196/test/0ccfca60-31fe-11ea-8512-1f30fd3689d9.jpg 800w"
                           alt="Це підзаголовок"
                           src="https://ichef.bbci.co.uk/news/640/cpsdevpb/e196/test/0ccfca60-31fe-11ea-8512-1f30fd3689d9.jpg"
                           width="800"
                           class="StyledImg-sc-7vx2mr-0 dQLeqZ"
                      >
                    </noscript>
                    <p role="text"
                       class="Copyright-sc-11lgtw-0 hDvIfz"
                    >
                      <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                        Автор фото,
                      </span>
                      <span lang="en-GB">
                        Getty Images
                      </span>
                    </p>
                  </div>
                </div>
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 ichKJL">
                </div>
              </div>
            </figure>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <p class="Paragraph-k859h4-0 hymSIv">
              Ця тестова стаття створена для того, щоб ми могли запускати автоматизовані тестові тести на нашому веб-сайті.
            </p>
          </div>
        </div>
      </main>
      <footer role="contentinfo">
        <div class="Banner-m3awbo-1 gpxnCd">
          <div class="SvgWrapper-m3awbo-0 dPXtDJ">
            <a href="/ukrainian"
               class="StyledLink-m3awbo-2 hsAGLj"
            >
              <svg height="24"
                   viewbox="0 0 251.36 24"
                   xmlns="http://www.w3.org/2000/svg"
                   focusable="false"
                   aria-hidden="true"
                   class="BrandSvg-m3awbo-3 cOdfGG"
              >
                <g fill-rule="evenodd"
                   stroke="#000"
                   stroke-width=".335"
                   style="stroke:#fff"
                >
                  <path d="M76.73.28v21.85H53.51V.28zm-4.62 14.58l-.37.23a10.85 10.85 0 0 1-5.53 1.69c-3.8 0-6.31-2.27-6.32-5.55s2.62-5.58 6.22-5.59a10.93 10.93 0 0 1 5.47 1.56l.36.2V4.47l-.16-.06a15.06 15.06 0 0 0-5.65-1.27 9.62 9.62 0 0 0-6.53 2.34 7.9 7.9 0 0 0-2.59 6 7.7 7.7 0 0 0 2.16 5.17A9.1 9.1 0 0 0 66 19.28a12.73 12.73 0 0 0 6-1.37l.14-.07zM50 .28v21.85H26.75V.28zm-5.54 14.48A4.21 4.21 0 0 0 41 10.69a3.87 3.87 0 0 0 1.35-1.08A3.41 3.41 0 0 0 43 7.47a3.8 3.8 0 0 0-1.27-2.85 5.76 5.76 0 0 0-4-1.29h-4.89v15.75h5.81a6.54 6.54 0 0 0 4.46-1.39 3.88 3.88 0 0 0 1.35-2.93z">
                  </path>
                  <path d="M41.57 14.45a1.86 1.86 0 0 1-.63 1.45 3.85 3.85 0 0 1-2.6.72h-2.68v-4.3h2.56a4.45 4.45 0 0 1 2.57.62 1.76 1.76 0 0 1 .78 1.51zM39.4 9.31a1.84 1.84 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57h-1.9v4.07H37a4.21 4.21 0 0 0 2.4-.56zM23.22.28v21.85H0V.28zM17.7 14.76a4.21 4.21 0 0 0-3.43-4.07 3.86 3.86 0 0 0 1.35-1.08 3.41 3.41 0 0 0 .65-2.13A3.8 3.8 0 0 0 15 4.63a5.76 5.76 0 0 0-4-1.29H6v15.74h5.9a6.54 6.54 0 0 0 4.46-1.39 3.89 3.89 0 0 0 1.34-2.93z">
                  </path>
                  <path d="M12.64 9.31a1.85 1.85 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57H8.91v4.07h1.3a4.21 4.21 0 0 0 2.43-.56zM14 12.94a4.45 4.45 0 0 0-2.57-.62H8.91v4.29h2.68a3.85 3.85 0 0 0 2.6-.72 1.86 1.86 0 0 0 .63-1.45 1.76 1.76 0 0 0-.82-1.5zM101 3.34h2.15v15.78h-1.94L90.69 7v12.12h-2.12V3.34h1.83L101 15.6zM107.26 3.34h8.95v2h-6.69v4.81H116v2h-6.46v4.9h6.9v2h-9.16zM140.33 3.34h2.25l-6.38 15.85h-.5l-5.16-12.84-5.21 12.84h-.49l-6.36-15.85h2.28l4.35 10.88 4.38-10.88h2.14L136 14.22zM148.7 12.51l-1.72-1a7.8 7.8 0 0 1-2.3-1.94 3.68 3.68 0 0 1-.68-2.2 3.88 3.88 0 0 1 1.29-3 4.83 4.83 0 0 1 3.36-1.16 6.36 6.36 0 0 1 3.63 1.11v2.49a5.23 5.23 0 0 0-3.67-1.64 3 3 0 0 0-1.82.51 1.55 1.55 0 0 0-.71 1.32 2 2 0 0 0 .52 1.33 6.6 6.6 0 0 0 1.69 1.3l1.73 1q2.89 1.73 2.89 4.39a4 4 0 0 1-1.27 3.08 4.65 4.65 0 0 1-3.3 1.19 6.94 6.94 0 0 1-4.26-1.44V15a5.32 5.32 0 0 0 4.24 2.32 2.66 2.66 0 0 0 1.77-.59 1.85 1.85 0 0 0 .71-1.48q-.02-1.45-2.1-2.74z">
                  </path>
                  <path d="M168.37 0v22.59"
                        stroke-width="2"
                  >
                  </path>
                  <path d="M185.76 6.3l3.83 8.91 3.14-8.91h1.49l-4 10.65a7.39 7.39 0 0 1-.51 1.1 3.16 3.16 0 0 1-.59.75 2.11 2.11 0 0 1-.7.43 2.49 2.49 0 0 1-.85.14 2.54 2.54 0 0 1-.75-.1 2.37 2.37 0 0 1-.59-.27v-1.38a1.54 1.54 0 0 0 .59.38 2.43 2.43 0 0 0 .81.12A1 1 0 0 0 188 18a1.42 1.42 0 0 0 .38-.23 1.57 1.57 0 0 0 .32-.37 1.14 1.14 0 0 0 .17-.49L184.23 6.3zM196.3 6.3h1.53v4.33a3.73 3.73 0 0 0 .77-.07 1.58 1.58 0 0 0 .62-.28 2.14 2.14 0 0 0 .51-.58 5.79 5.79 0 0 0 .47-1 6.94 6.94 0 0 1 .58-1.18 3 3 0 0 1 .66-.75 2.19 2.19 0 0 1 .8-.4 4 4 0 0 1 1-.11h.24v1.41a3.1 3.1 0 0 0-.85.1 1.31 1.31 0 0 0-.55.31 1.77 1.77 0 0 0-.38.54q-.16.33-.32.8a3.77 3.77 0 0 1-.26.57 4.23 4.23 0 0 1-.35.54 3.49 3.49 0 0 1-.41.45 1.67 1.67 0 0 1-.44.3 5 5 0 0 1 .68.37 2.94 2.94 0 0 1 .53.46 5.07 5.07 0 0 1 .5.65q.25.38.57.95l1.9 3.29h-1.74l-1.65-2.87A12.07 12.07 0 0 0 200 13a3.32 3.32 0 0 0-.63-.67 1.84 1.84 0 0 0-.68-.34 3.59 3.59 0 0 0-.86-.09V17h-1.53zM206.23 6.3h3.33a4.3 4.3 0 0 1 1.51.24 2.92 2.92 0 0 1 1.06.66 2.62 2.62 0 0 1 .62 1 3.49 3.49 0 0 1 .2 1.19 3.18 3.18 0 0 1-.21 1.17 2.48 2.48 0 0 1-.66.95 3.19 3.19 0 0 1-1.12.63 4.94 4.94 0 0 1-1.61.23h-1.59V17h-1.53zm1.53 1.37V11h1.73a2.55 2.55 0 0 0 .77-.11 1.61 1.61 0 0 0 .59-.33 1.47 1.47 0 0 0 .38-.53 1.79 1.79 0 0 0 .13-.71 2 2 0 0 0-.09-.58 1.36 1.36 0 0 0-.3-.52 1.53 1.53 0 0 0-.56-.38 2.26 2.26 0 0 0-.87-.14zM218.66 6.24L223.43 17h-1.56l-1.42-3.14h-4.53L214.58 17H213l4.58-10.71zm-.56 2.34l-1.59 3.86h3.31zM225.44 6.3H227V17h-1.53zM238.93 6.3V17h-1.53v-4.69h-6V17h-1.53V6.3h1.53v4.64h6V6.3zM246.59 6.24L251.36 17h-1.56l-1.42-3.14h-4.53L242.5 17h-1.56l4.58-10.71zM246 8.58l-1.59 3.86h3.31zM224.77 2.66a.88.88 0 0 0-.64.25.85.85 0 0 0-.27.63.9.9 0 0 0 .9.9.85.85 0 0 0 .64-.27.89.89 0 0 0 .25-.63.87.87 0 0 0-.89-.89zM228.31 2.92a.87.87 0 0 0-.64-.26.88.88 0 0 0-.64.25.85.85 0 0 0-.27.63.9.9 0 0 0 .9.9.85.85 0 0 0 .64-.27.89.89 0 0 0 .25-.63.87.87 0 0 0-.24-.62z">
                  </path>
                </g>
              </svg>
              <span role="text"
                    class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
              >
                <span lang="en-GB">
                  BBC News
                </span>
                ,
                Україна
              </span>
            </a>
          </div>
        </div>
        <div class="SitewideLinksWrapper-sc-1gggobt-0 gccobV">
          <div class="ConstrainedWrapper-sc-1gggobt-1 bpERjU">
            <ul role="list"
                class="StyledList-sc-2e1ekc-0 bmlrLC"
            >
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/ukrainian/institutional-50170368"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Чому BBC заслуговує на довіру
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/ukrainian/institutional-38144387"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Правила користування
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/ukrainian/institutional-38144827"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Особисті дані
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/usingthebbc/cookies/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Cookies
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/ukrainian/institutional-38146278"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Зв'язатися з BBC
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a lang="en-GB"
                   href="https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    AdChoices / Do Not Sell My Info
                  </span>
                </a>
              </li>
            </ul>
            <p class="StyledParagraph-sc-1gggobt-2 jQPFnr">
              <span lang="en-GB">
                ©
              </span>
              2020 BBC. ВВС не несе відповідальності за контент інших сайтів.
              <a href="https://www.bbc.co.uk/help/web/links/"
                 class="StyledLink-nhmg8j-0 jHQlUp"
              >
                <span class="StyleLinkText-nhmg8j-1 fPnERB">
                  Ознайомтеся з нашими правилами зовнішніх посилань.
                </span>
              </a>
            </p>
          </div>
        </div>
      </footer>
    </div>
    <script>
      window.SIMORGH_DATA={"status":200,"pageData":{"metadata":{"id":"mock-id","locators":{"optimoUrn":"urn:bbc:optimo:asset:cp4l2mrejvdo"},"type":"article","createdBy":"Ukrainian","language":"uk","lastUpdated":1578478076155,"firstPublished":1578478069451,"lastPublished":1578478069451,"timestamp":1578478069451,"options":{},"analyticsLabels":{},"passport":{"language":"uk","home":"http://www.bbc.co.uk/ontologies/passport/home/Ukrainian","passportId":"96515063-ce2b-4e3f-8418-082651ea618b","locator":"urn:bbc:optimo:asset:cp4l2mrejvdo","availability":"AVAILABLE","taggings":[{"predicate":"http://www.bbc.co.uk/ontologies/passport/predicate/About","value":"http://www.bbc.co.uk/things/ee8750ed-a7fb-453f-bfca-2aa8b3fb064c#id"}]},"tags":{},"version":"v1.1.4","blockTypes":["headline","text","paragraph","fragment","image","caption","altText","rawImage","urlLink","video","subheadline"]},"content":{"model":{"blocks":[{"type":"headline","model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"Це заголовок цієї тестової статті","blocks":[{"type":"fragment","model":{"text":"Це заголовок цієї тестової статті","attributes":[]},"id":"mock-id","position":[1,1,1,1]}]},"id":"mock-id","position":[1,1,1]}]},"id":"mock-id","position":[1,1]}]},"id":"mock-id","position":[1]},{"type":"image","model":{"blocks":[{"type":"caption","model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"Це тестове зображення, авторське право BBC, показує карту Франції. Зображення знаходиться в перших трьох блоках і має цей підпис.","blocks":[{"type":"fragment","model":{"text":"Це тестове зображення, авторське право BBC, показує карту Франції. Зображення знаходиться в перших трьох блоках і має цей підпис.","attributes":[]},"id":"mock-id","position":[2,1,1,1,1]}]},"id":"mock-id","position":[2,1,1,1]}]},"id":"mock-id","position":[2,1,1]}]},"id":"mock-id","position":[2,1]},{"type":"altText","model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"Це тестове зображення, авторське право BBC, показує карту Франції. Зображення знаходиться в перших трьох блоках і має цей підпис.","blocks":[{"type":"fragment","model":{"text":"Це тестове зображення, авторське право BBC, показує карту Франції. Зображення знаходиться в перших трьох блоках і має цей підпис.","attributes":[]},"id":"mock-id","position":[2,2,1,1,1]}]},"id":"mock-id","position":[2,2,1,1]}]},"id":"mock-id","position":[2,2,1]}]},"id":"mock-id","position":[2,2]},{"type":"rawImage","model":{"width":624,"height":351,"locator":"340d/test/8f2169c0-31fd-11ea-8512-1f30fd3689d9.jpg","originCode":"cpsdevpb","copyrightHolder":"BBC"},"id":"mock-id","position":[2,3]}]},"id":"mock-id","position":[2]},{"type":"timestamp","model":{"firstPublished":1578478069451,"lastPublished":1578478069451},"id":"mock-id","position":[3]},{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"Це текстовий блок, який містить посилання URL на головну сторінку BBC Weather.","blocks":[{"type":"fragment","model":{"text":"Це текстовий блок, який містить посилання URL на головну сторінку ","attributes":[]},"id":"mock-id","position":[4,1,1]},{"type":"urlLink","model":{"text":"BBC Weather","blocks":[{"type":"fragment","model":{"text":"BBC Weather","attributes":[]},"id":"mock-id","position":[4,1,2,1]}],"locator":"https://www.bbc.co.uk/weather","isExternal":false},"id":"mock-id","position":[4,1,2]},{"type":"fragment","model":{"text":".","attributes":[]},"id":"mock-id","position":[4,1,3]}]},"id":"mock-id","position":[4,1]}]},"id":"mock-id","position":[4]},{"type":"video","model":{"locator":"urn:bbc:pips:pid:p01plpzw","blocks":[{"type":"caption","model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"Це підзаголовок","blocks":[{"type":"fragment","model":{"text":"Це підзаголовок","attributes":[]},"id":"mock-id","position":[5,1,1,1,1]}]},"id":"mock-id","position":[5,1,1,1]}]},"id":"mock-id","position":[5,1,1]}]},"id":"mock-id","position":[5,1]},{"type":"aresMedia","model":{"blocks":[{"blockId":"urn:bbc:ares::clip:p01plpzw","type":"aresMediaMetadata","model":{"id":"mock-id","subType":"clip","format":"audio_video","title":"Test Ukrainian","synopses":{"short":"Test Ukrainian","long":"Test Ukrainian","medium":"Test Ukrainian"},"imageUrl":"ichef.test.bbci.co.uk/images/ic/$recipe/p012zl0f.jpg","embedding":true,"advertising":true,"versions":[{"versionId":"p01plq00","types":["Original"],"duration":29,"durationISO8601":"PT29S","warnings":{},"availableTerritories":{"uk":true,"nonUk":true,"world":false},"availableFrom":1575389071000}],"syndication":{"destinations":[]}},"id":"mock-id","position":[5,2,1]},{"type":"image","model":{"blocks":[{"type":"rawImage","model":{"width":976,"height":549,"locator":"ichef.test.bbci.co.uk/images/ic/$widthxn/p012zl0f.jpg","originCode":"mpv"},"id":"mock-id","position":[5,2,2,1]},{"type":"altText","model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"World Service Thumbnail","blocks":[{"type":"fragment","model":{"text":"World Service Thumbnail","attributes":[]},"id":"mock-id","position":[5,2,2,2,1,1,1]}]},"id":"mock-id","position":[5,2,2,2,1,1]}]},"id":"mock-id","position":[5,2,2,2,1]}]},"id":"mock-id","position":[5,2,2,2]}]},"id":"mock-id","position":[5,2,2]}]},"id":"mock-id","position":[5,2]}]},"id":"mock-id","position":[5]},{"type":"subheadline","model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"Це підзаголовок","blocks":[{"type":"fragment","model":{"text":"Це підзаголовок","attributes":[]},"id":"mock-id","position":[6,1,1,1]}]},"id":"mock-id","position":[6,1,1]}]},"id":"mock-id","position":[6,1]}]},"id":"mock-id","position":[6]},{"type":"image","model":{"blocks":[{"type":"altText","model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"Це підзаголовок","blocks":[{"type":"fragment","model":{"text":"Це підзаголовок","attributes":[]},"id":"mock-id","position":[7,1,1,1,1]}]},"id":"mock-id","position":[7,1,1,1]}]},"id":"mock-id","position":[7,1,1]}]},"id":"mock-id","position":[7,1]},{"type":"rawImage","model":{"width":800,"height":450,"locator":"e196/test/0ccfca60-31fe-11ea-8512-1f30fd3689d9.jpg","originCode":"cpsdevpb","copyrightHolder":"Getty Images"},"id":"mock-id","position":[7,2]}]},"id":"mock-id","position":[7]},{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"Ця тестова стаття створена для того, щоб ми могли запускати автоматизовані тестові тести на нашому веб-сайті.","blocks":[{"type":"fragment","model":{"text":"Ця тестова стаття створена для того, щоб ми могли запускати автоматизовані тестові тести на нашому веб-сайті.","attributes":[]},"id":"mock-id","position":[8,1,1]}]},"id":"mock-id","position":[8,1]}]},"id":"mock-id","position":[8]}]}},"promo":{"headlines":{"seoHeadline":"Це заголовок цієї тестової статті"},"locators":{"optimoUrn":"urn:bbc:optimo:asset:cp4l2mrejvdo"},"summary":"","timestamp":1578478069451,"id":"mock-id","type":"cps"},"relatedContent":{"site":{"subType":"site","name":"Ukrainian","uri":"/ukrainian","type":"simple"},"groups":[]}},"path":"/ukrainian/articles/cp4l2mrejvdo","timeOnServer": "mock-time"}
    </script>
    <div>
      <!--[if !IE]><!-->
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="text/javascript"
            crossorigin="anonymous"
            defer
    >
      [43]
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-253ae210.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-0f485567.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-1f20a385.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-678f84af.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-10e2e882.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/main-d0ae3f07.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/main-f71cff67.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="ukrainian"
            src="http://localhost:7080/static/js/ukrainian-31ecd969.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <div>
    </div>
    <script type="text/javascript">
      document.documentElement.classList.remove("no-js");
    </script>
  </body>
</html>
`;
